fixed alignenter

--- a/scss/_entry.scss
+++ b/scss/_entry.scss
@@ -145,6 +145,7 @@
 		max-width: 100%;
 		height: auto;
 		&.aligncenter{
+			display: block;
 			margin: auto;
 		}
 		&.alignleft{
